--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
+        "sentry/sentry-laravel": "^2.12",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
